@@ -21,16 +21,17 @@
  * OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN
  * THE SOFTWARE.
  */
+
 package hudson.util;
 
-import javax.servlet.http.HttpServletRequest;
-import java.io.UnsupportedEncodingException;
 import java.net.URLDecoder;
+import java.nio.charset.StandardCharsets;
 import java.util.ArrayList;
 import java.util.Collections;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
+import javax.servlet.http.HttpServletRequest;
 
 /**
  * Parses the query string of the URL into a key/value pair.
@@ -48,24 +49,20 @@ import java.util.Map;
  * @since 1.394
  */
 public class QueryParameterMap {
-    private final Map<String,List<String>> store = new HashMap<>();
+    private final Map<String, List<String>> store = new HashMap<>();
 
     /**
      * @param queryString
      *      String that looks like {@code abc=def&ghi=jkl}
      */
     public QueryParameterMap(String queryString) {
-        if (queryString==null || queryString.length()==0)   return;
-        try {
-            for (String param : queryString.split("&")) {
-                String[] kv = param.split("=");
-                String key = URLDecoder.decode(kv[0], "UTF-8");
-                String value = URLDecoder.decode(kv[1], "UTF-8");
-                List<String> values = store.computeIfAbsent(key, k -> new ArrayList<>());
-                values.add(value);
-            }
-        } catch (UnsupportedEncodingException e) {
-            throw new AssertionError(e);
+        if (queryString == null || queryString.length() == 0)   return;
+        for (String param : queryString.split("&")) {
+            String[] kv = param.split("=");
+            String key = URLDecoder.decode(kv[0], StandardCharsets.UTF_8);
+            String value = URLDecoder.decode(kv[1], StandardCharsets.UTF_8);
+            List<String> values = store.computeIfAbsent(key, k -> new ArrayList<>());
+            values.add(value);
         }
     }
 
@@ -75,11 +72,11 @@ public class QueryParameterMap {
 
     public String get(String name) {
         List<String> v = store.get(name);
-        return v!=null?v.get(0):null;
+        return v != null ? v.get(0) : null;
     }
 
     public List<String> getAll(String name) {
         List<String> v = store.get(name);
-        return v!=null? Collections.unmodifiableList(v) : Collections.emptyList();
+        return v != null ? Collections.unmodifiableList(v) : Collections.emptyList();
     }
 }
