@@ -24,6 +24,13 @@
 
 package jenkins.model;
 
+import static java.util.logging.Level.FINE;
+import static java.util.logging.Level.FINER;
+import static java.util.logging.Level.INFO;
+import static java.util.logging.Level.WARNING;
+
+import edu.umd.cs.findbugs.annotations.CheckForNull;
+import edu.umd.cs.findbugs.annotations.NonNull;
 import edu.umd.cs.findbugs.annotations.SuppressFBWarnings;
 import hudson.Extension;
 import hudson.Util;
@@ -55,20 +62,12 @@ import java.util.TreeMap;
 import java.util.logging.Logger;
 import java.util.regex.Matcher;
 import java.util.regex.Pattern;
-import edu.umd.cs.findbugs.annotations.CheckForNull;
-import edu.umd.cs.findbugs.annotations.NonNull;
-import org.apache.commons.io.FileUtils;
 import org.apache.commons.lang.time.FastDateFormat;
 import org.apache.tools.ant.BuildException;
 import org.kohsuke.accmod.Restricted;
 import org.kohsuke.accmod.restrictions.NoExternalUse;
 import org.kohsuke.stapler.StaplerProxy;
 import org.kohsuke.stapler.framework.io.WriterOutputStream;
-
-import static java.util.logging.Level.FINE;
-import static java.util.logging.Level.FINER;
-import static java.util.logging.Level.INFO;
-import static java.util.logging.Level.WARNING;
 
 /**
  * Converts legacy {@code builds} directories to the current format.
@@ -85,14 +84,14 @@ public final class RunIdMigrator {
     static final Logger LOGGER = Logger.getLogger(RunIdMigrator.class.getName());
     private static final String MAP_FILE = "legacyIds";
     /** avoids wasting a map for new jobs */
-    private static final Map<String,Integer> EMPTY = new TreeMap<>();
+    private static final Map<String, Integer> EMPTY = new TreeMap<>();
 
     /**
      * Did we record "unmigrate" instruction for this $JENKINS_HOME? Yes if it's in the set.
      */
     private static final Set<File> offeredToUnmigrate = Collections.synchronizedSet(new HashSet<>());
 
-    private @NonNull Map<String,Integer> idToNumber = EMPTY;
+    private @NonNull Map<String, Integer> idToNumber = EMPTY;
 
     public RunIdMigrator() {}
 
@@ -109,7 +108,7 @@ public final class RunIdMigrator {
         }
         idToNumber = new TreeMap<>();
         try {
-            for (String line : FileUtils.readLines(f)) {
+            for (String line : Files.readAllLines(Util.fileToPath(f), StandardCharsets.UTF_8)) {
                 int i = line.indexOf(' ');
                 idToNumber.put(line.substring(0, i), Integer.parseInt(line.substring(i + 1)));
             }
@@ -123,8 +122,10 @@ public final class RunIdMigrator {
         File f = new File(dir, MAP_FILE);
         try (AtomicFileWriter w = new AtomicFileWriter(f)) {
             try {
-                for (Map.Entry<String,Integer> entry : idToNumber.entrySet()) {
-                    w.write(entry.getKey() + ' ' + entry.getValue() + '\n');
+                synchronized (this) {
+                    for (Map.Entry<String, Integer> entry : idToNumber.entrySet()) {
+                        w.write(entry.getKey() + ' ' + entry.getValue() + '\n');
+                    }
                 }
                 w.commit();
             } finally {
@@ -192,6 +193,7 @@ public final class RunIdMigrator {
     }
 
     private static final Pattern NUMBER_ELT = Pattern.compile("(?m)^  <number>(\\d+)</number>(\r?\n)");
+
     private void doMigrate(File dir) {
         idToNumber = new TreeMap<>();
         File[] kids = dir.listFiles();
@@ -252,7 +254,7 @@ public final class RunIdMigrator {
                     LOGGER.log(WARNING, "found no build.xml in {0}", name);
                     continue;
                 }
-                String xml = FileUtils.readFileToString(buildXml, StandardCharsets.UTF_8);
+                String xml = Files.readString(Util.fileToPath(buildXml), StandardCharsets.UTF_8);
                 Matcher m = NUMBER_ELT.matcher(xml);
                 if (!m.find()) {
                     LOGGER.log(WARNING, "could not find <number> in {0}/build.xml", name);
@@ -263,7 +265,7 @@ public final class RunIdMigrator {
                 xml = m.replaceFirst("  <id>" + name + "</id>" + nl + "  <timestamp>" + timestamp + "</timestamp>" + nl);
                 File newKid = new File(dir, Integer.toString(number));
                 move(kid, newKid);
-                FileUtils.writeStringToFile(new File(newKid, "build.xml"), xml, StandardCharsets.UTF_8);
+                Files.writeString(Util.fileToPath(newKid).resolve("build.xml"), xml, StandardCharsets.UTF_8);
                 LOGGER.log(FINE, "fully processed {0} → {1}", new Object[] {name, number});
                 idToNumber.put(name, number);
             } catch (Exception x) {
@@ -283,7 +285,7 @@ public final class RunIdMigrator {
             Files.move(src.toPath(), dest.toPath());
         } catch (IOException x) {
             throw x;
-        } catch (Exception x) {
+        } catch (RuntimeException x) {
             throw new IOException(x);
         }
     }
@@ -361,9 +363,11 @@ public final class RunIdMigrator {
             }
         }
     }
+
     private static final Pattern ID_ELT = Pattern.compile("(?m)^  <id>([0-9_-]+)</id>(\r?\n)");
     private static final Pattern TIMESTAMP_ELT = Pattern.compile("(?m)^  <timestamp>(\\d+)</timestamp>(\r?\n)");
     /** Inverse of {@link #doMigrate}. */
+
     private void unmigrateBuildsDir(File builds) throws Exception {
         File mapFile = new File(builds, MAP_FILE);
         if (!mapFile.isFile()) {
@@ -382,7 +386,7 @@ public final class RunIdMigrator {
                 System.err.println(buildXml + " did not exist");
                 continue;
             }
-            String xml = FileUtils.readFileToString(buildXml, StandardCharsets.UTF_8);
+            String xml = Files.readString(Util.fileToPath(buildXml), StandardCharsets.UTF_8);
             Matcher m = TIMESTAMP_ELT.matcher(xml);
             if (!m.find()) {
                 System.err.println(buildXml + " did not contain <timestamp> as expected");
@@ -400,7 +404,7 @@ public final class RunIdMigrator {
                 // Post-migration build. We give it a new ID based on its timestamp.
                 id = legacyIdFormatter.format(new Date(timestamp));
             }
-            FileUtils.write(buildXml, xml, StandardCharsets.UTF_8);
+            Files.writeString(Util.fileToPath(buildXml), xml, StandardCharsets.UTF_8);
             if (!build.renameTo(new File(builds, id))) {
                 System.err.println(build + " could not be renamed");
             }
