@@ -1,8 +1,7 @@
 package jenkins.security;
 
-import javax.servlet.Filter;
-import java.util.Collections;
 import java.util.List;
+import javax.servlet.Filter;
 
 /**
  * {@link Filter} that performs HTTP basic authentication based on API token.
@@ -20,6 +19,6 @@ import java.util.List;
 public class ApiTokenFilter extends BasicHeaderProcessor {
     @Override
     protected List<? extends BasicHeaderAuthenticator> all() {
-        return Collections.singletonList(new BasicHeaderApiTokenAuthenticator());
+        return List.of(new BasicHeaderApiTokenAuthenticator());
     }
 }
