@@ -22,19 +22,17 @@
  * OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN
  * THE SOFTWARE.
  */
+
 package jenkins.util.xml;
 
+import java.util.Locale;
+import java.util.Set;
 import org.jaxen.Function;
 import org.jaxen.FunctionContext;
 import org.jaxen.UnresolvableException;
 import org.jaxen.XPathFunctionContext;
 import org.kohsuke.accmod.Restricted;
 import org.kohsuke.accmod.restrictions.NoExternalUse;
-
-import java.util.Collections;
-import java.util.HashSet;
-import java.util.Locale;
-import java.util.Set;
 
 /**
  * {@link org.jaxen.FunctionContext} that removes some {@link org.dom4j.XPath}
@@ -51,9 +49,7 @@ public class FilteredFunctionContext implements FunctionContext {
     /**
      * Default set of "bad" function names.
      */
-    private static final Set<String> DEFAULT_ILLEGAL_FUNCTIONS = Collections.unmodifiableSet(new HashSet<>(
-            Collections.singletonList("document")
-    ));
+    private static final Set<String> DEFAULT_ILLEGAL_FUNCTIONS = Set.of("document");
     private final FunctionContext base;
     private final Set<String> illegalFunctions;
 
