@@ -21,6 +21,7 @@
  * OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN
  * THE SOFTWARE.
  */
+
 package hudson.model.queue;
 
 import static org.junit.Assert.assertEquals;
@@ -36,18 +37,16 @@ import hudson.model.Queue.BuildableItem;
 import hudson.model.Queue.JobOffer;
 import hudson.model.Queue.Task;
 import hudson.model.Queue.WaitingItem;
+import java.lang.reflect.Field;
+import java.util.ArrayList;
+import java.util.Collection;
+import java.util.GregorianCalendar;
+import java.util.List;
+import java.util.concurrent.CopyOnWriteArrayList;
 import org.junit.Rule;
 import org.junit.Test;
 import org.jvnet.hudson.test.JenkinsRule;
 import org.jvnet.hudson.test.TestExtension;
-
-import java.lang.reflect.Field;
-import java.util.ArrayList;
-import java.util.Collection;
-import java.util.Collections;
-import java.util.GregorianCalendar;
-import java.util.List;
-import java.util.concurrent.CopyOnWriteArrayList;
 
 /**
  * @author Kohsuke Kawaguchi
@@ -61,7 +60,7 @@ public class LoadPredictorTest {
     public static class LoadPredictorImpl extends LoadPredictor {
         @Override
         public Iterable<FutureLoad> predict(MappingWorksheet plan, Computer computer, long start, long end) {
-            return Collections.singletonList(new FutureLoad(start + 5000, end - (start + 5000), 1));
+            return List.of(new FutureLoad(start + 5000, end - (start + 5000), 1));
         }
     }
 
@@ -77,53 +76,24 @@ public class LoadPredictorTest {
     public void test1() throws Exception {
         Task t = mock(Task.class);
         when(t.getEstimatedDuration()).thenReturn(10000L);
-        when(t.getSubTasks()).thenReturn((Collection) Collections.singletonList(t));
+        when(t.getSubTasks()).thenReturn((Collection) List.of(t));
 
         Computer c = createMockComputer(1);
 
         JobOffer o = createMockOffer(c.getExecutors().get(0));
 
-        MappingWorksheet mw = new MappingWorksheet(wrap(t), Collections.singletonList(o));
+        MappingWorksheet mw = new MappingWorksheet(wrap(t), List.of(o));
 
         // the test load predictor should have pushed down the executor count to 0
         assertTrue(mw.executors.isEmpty());
-        assertEquals(1,mw.works.size());
+        assertEquals(1, mw.works.size());
     }
 
     private BuildableItem wrap(Queue.Task t) {
-        return new BuildableItem(new WaitingItem(new GregorianCalendar(),t,new ArrayList<>()));
+        return new BuildableItem(new WaitingItem(new GregorianCalendar(), t, new ArrayList<>()));
     }
 
-    /**
-     * Test scenario is:
-     *
-     * - a computer with two executors, one is building something now
-     * - a future load of size 1 is predicted but it'll start after the currently building something is completed.
-     * - hence the currently available executor should be considered available (unlike in test1)
-     */
-    @Test
-    public void test2() throws Exception {
-        Task t = mock(Task.class);
-        when(t.getEstimatedDuration()).thenReturn(10000L);
-        when(t.getSubTasks()).thenReturn((Collection) Collections.singletonList(t));
-
-        Computer c = createMockComputer(2);
-        Executor e = c.getExecutors().get(0);
-
-        when(e.isIdle()).thenReturn(false);
-        when(e.getEstimatedRemainingTimeMillis()).thenReturn(300L);
-
-        JobOffer o = createMockOffer(c.getExecutors().get(1));
-
-        MappingWorksheet mw = new MappingWorksheet(wrap(t), Collections.singletonList(o));
-
-        // since the currently busy executor will free up before a future predicted load starts,
-        // we should have a valid executor remain in the queue
-        assertEquals(1,mw.executors.size());
-        assertEquals(1,mw.works.size());
-    }
-
-    private JobOffer createMockOffer(Executor e) throws NoSuchFieldException, IllegalAccessException {
+    private JobOffer createMockOffer(Executor e) {
         JobOffer o = mock(JobOffer.class);
         when(o.getExecutor()).thenReturn(e);
         return o;
@@ -136,7 +106,7 @@ public class LoadPredictorTest {
 
         List executors = new CopyOnWriteArrayList();
 
-        for (int i=0; i<nExecutors; i++) {
+        for (int i = 0; i < nExecutors; i++) {
             Executor e = mock(Executor.class);
             when(e.isIdle()).thenReturn(true);
             when(e.getOwner()).thenReturn(c);
